# AUTO_UPLOAD_ESP

./: .gitignore  README.md  config.json  main.py  pyproject.toml
.github/workflows/: test-build.yml
data/: config.txt
data/html/: ant_config.html  eth_config.html  gpo_test.html  home.html  prefix.html  protected_inventory.html  reader.html  reader_config.html  reader_modes.html  style.css  webhook_config.html
esp_depend/: esptool
scripts/: build_exe.py  commit.py  format.sh  migrate.py
