[project]
name = "esp-upload"
version = "1.0.0"
description = "Ferramenta para gerar LittleFS e gravar firmware ESP32/ESP32-S3 automaticamente"
authors = [
    {name = "Gabriel Henrique Pascon",email = "gh.pascon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pyinstaller (>=6.16.0,<7.0.0)",
    "pyserial (>=3.5,<4.0)",
    "ruff (>=0.15.5,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
